--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ nav ul li a{
   border-bottom-left-radius: 10px 10px;
 }
 
+#city{
+  color: black;
+  font-weight: bold;
+}
 
 #search_button{
   margin: 0px;
@@ -62,25 +66,67 @@ nav ul li a{
   background-color: #0065FC;
   color: white;
 }
+
 /*Filtres*/
 
 .filtre{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.filtre ul{
-  display:flex;
+  justify-content: flex-start;
+  padding: 20px;
   padding-left: 0px;
-  border-width: thin;
-  border: 50px;
-  border-radius: 50px 50px;
 }
 
-.filtre ul li{
+.filtre p{
+  margin: 10px 25px 0px 0px;
+  font-weight: bold;
+  height: 1.6em;
+}
+
+.list{
+  display:flex;
+}
+
+.list_item{
+  display: flex;
+  align-items: center;
   list-style: none;
   font-weight: bold;
   margin: 0px 20px 0px 0px;
+  border-radius: 30px 30px;
+}
 
+.list_item .fas{
+  background-color: #DEEBFF;
+  color: #0065FC;
+  padding: 10px;
+  border-radius: 20px 20px;
+}
+
+.list_item a{
+  padding-right: 7px;
+  text-decoration: none;
+  color: black;
+  border: 2px solid #F2F2F2;
+  border-radius: 30px;
+}
+
+/*Info*/
+
+.info{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 3px;
+  margin-top: 0.4em;
+}
+
+#icon_info .fas{
+  color: #0065FC;
+  border: 2px solid #F2F2F2;
+  padding: 7px;
+  border-radius: 20px 20px;
+}
+
+.info p{
+  margin-left: 0.3em
 }
