--- a/css/style.css
+++ b/css/style.css
@@ -116,17 +116,107 @@ nav ul li a{
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 3px;
+  height: 2px;
   margin-top: 0.4em;
+  margin-bottom: 2em;
 }
 
 #icon_info .fas{
   color: #0065FC;
   border: 2px solid #F2F2F2;
   padding: 7px;
+  margin: 0px;
   border-radius: 20px 20px;
 }
 
 .info p{
   margin-left: 0.3em
+}
+
+/*Section 2*/
+#block{
+  background-color: #F2F2F2;
+}
+
+h2{
+  margin-left: 45px;
+}
+
+article img{
+  width: 59vh;
+  height: 25vh;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  margin: 5px;
+}
+
+/* Grid*/
+
+.container{
+  display: grid;
+  justify-content: space-evenly;
+  grid-row-gap: 35px;
+  grid-template-rows: repeat (2, 50px);
+  grid-template-columns: repeat (3, 50px);
+}
+
+.item1{
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.item2{
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.item3{
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.item4{
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.item5{
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.item6{
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.item1, .item2, .item3, .item4, .item5, .item6{
+  display: grid;
+  background-color: white;
+  border-radius: 20px 20px;
+  width: 290px;
+  height: 240px
+}
+
+h3{
+  margin: 0px 5px 0px 10px;
+}
+
+article p{
+  margin: 0px 10px 0px 10px;
+}
+
+.star{
+  display: flex;
+  align-items: flex-start;
+  margin: 0px 10px 0px 10px;
+}
+
+.star i{
+  display: flex;
+  color: #0065FC;
+}
+
+.grey_star{
+  color: #F2F2F2;
 }
