--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
-body{
+body {
   font-family: "Raleway", sans-serif;
   margin-left: 30px;
 }
 
 /*Header & Nav*/
-
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-nav img{
+nav img {
   height: 50px;
 }
 
@@ -24,39 +23,44 @@ nav li{
   margin: 0px 30px 0px 30px;
 }
 
-nav ul li a{
+nav a{
   text-decoration: none;
-  color: #0065FC;
+  color: black;
   height: 16px;
+  padding: 10px 0px;
 }
 
-#bold{
+nav a:hover{
+  color: #0065FC;
+  border-top: 2px solid #0065FC;
+}
+
+.bold {
   font-weight: bold;
   color: #0065FC;
 }
 
 /*Searchbar*/
-
-#searchbar{
+#searchbar {
   display: flex;
   margin: 0px;
   padding: 0px;
   border: 1px;
 }
 
-#icon{
+#icon {
   padding: 9px;
   background-color: #F2F2F2;
   border-top-left-radius: 10px 10px;
   border-bottom-left-radius: 10px 10px;
 }
 
-#city{
+#city {
   color: black;
   font-weight: bold;
 }
 
-#search_button{
+#search_button {
   margin: 0px;
   padding: 5px;
   border: 0px;
@@ -67,25 +71,24 @@ nav ul li a{
 }
 
 /*Filtres*/
-
-.filtre{
+.filtre {
   display: flex;
   justify-content: flex-start;
   padding: 20px;
   padding-left: 0px;
 }
 
-.filtre p{
+.filtre p {
   margin: 10px 25px 0px 0px;
   font-weight: bold;
   height: 1.6em;
 }
 
-.list{
-  display:flex;
+.list {
+  display: flex;
 }
 
-.list_item{
+.list_item {
   display: flex;
   align-items: center;
   list-style: none;
@@ -94,14 +97,14 @@ nav ul li a{
   border-radius: 30px 30px;
 }
 
-.list_item .fas{
+.list_item .fas {
   background-color: #DEEBFF;
   color: #0065FC;
   padding: 10px;
   border-radius: 20px 20px;
 }
 
-.list_item a{
+.list_item a {
   padding-right: 7px;
   text-decoration: none;
   color: black;
@@ -110,8 +113,7 @@ nav ul li a{
 }
 
 /*Info*/
-
-.info{
+.info {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -120,7 +122,7 @@ nav ul li a{
   margin-bottom: 2em;
 }
 
-#icon_info .fas{
+#icon_info .fas {
   color: #0065FC;
   border: 2px solid #F2F2F2;
   padding: 7px;
@@ -128,20 +130,20 @@ nav ul li a{
   border-radius: 20px 20px;
 }
 
-.info p{
+.info p {
   margin-left: 0.3em
 }
 
 /*Section 2*/
-#block{
+#block {
   background-color: #F2F2F2;
 }
 
-h2{
+h2 {
   margin-left: 45px;
 }
 
-article img{
+article img {
   width: 59vh;
   height: 25vh;
   border-top-left-radius: 20px;
@@ -150,8 +152,7 @@ article img{
 }
 
 /* Grid*/
-
-.container{
+.container {
   display: grid;
   justify-content: space-evenly;
   grid-row-gap: 35px;
@@ -159,37 +160,37 @@ article img{
   grid-template-columns: repeat (3, 50px);
 }
 
-.item1{
+.item1 {
   grid-column: 1;
   grid-row: 1;
 }
 
-.item2{
+.item2 {
   grid-column: 2;
   grid-row: 1;
 }
 
-.item3{
+.item3 {
   grid-column: 3;
   grid-row: 1;
 }
 
-.item4{
+.item4 {
   grid-column: 1;
   grid-row: 2;
 }
 
-.item5{
+.item5 {
   grid-column: 2;
   grid-row: 2;
 }
 
-.item6{
+.item6 {
   grid-column: 3;
   grid-row: 2;
 }
 
-.item1, .item2, .item3, .item4, .item5, .item6{
+.item1, .item2, .item3, .item4, .item5, .item6 {
   display: grid;
   background-color: white;
   border-radius: 20px 20px;
@@ -197,25 +198,25 @@ article img{
   height: 240px
 }
 
-h3{
+h3 {
   margin: 0px 5px 0px 10px;
 }
 
-article p{
+article p {
   margin: 0px 10px 0px 10px;
 }
 
-.star{
+.star {
   display: flex;
   align-items: flex-start;
   margin: 0px 10px 0px 10px;
 }
 
-.star i{
+.star i {
   display: flex;
   color: #0065FC;
 }
 
-.grey_star{
+.grey_star {
   color: #F2F2F2;
 }
