--- a/css/resolution.css
+++ b/css/resolution.css
@@ -4,25 +4,24 @@
   nav {
     width: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: baseline;
   }
 
-  .navbar {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
+   .navbar{
+     margin-left: 0px;
+     border-bottom: 2px solid #F2F2F2;
+   }
 
-  .element{
+   .element{
     display: flex;
     flex-direction: row;
-    order: 2;
-    width: 50%;
   }
 
   .bold{
-    order: -1;
-    width: 50%;
+    position: absolute;
+    right: 10%;
+    top: 25px;
   }
 
   nav a{
