--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav a {
   text-decoration: none;
   color: black;
   height: 16px;
-  padding: 10px 0px;
+  padding: 25px 0px;
 }
 
 nav a:hover {
@@ -57,15 +57,21 @@ nav a:hover {
 
 #icon {
   padding: 9px;
+  width: 20px;
+  max-width: 20px;
   background-color: #F2F2F2;
   border-top-left-radius: 10px 10px;
   border-bottom-left-radius: 10px 10px;
 }
 
 #city {
-  color: black;
   font-weight: bold;
 }
+
+::placeholder {
+        color: black;
+        opacity: 1;
+    }
 
 #search_button {
   margin: 0px;
@@ -123,6 +129,11 @@ nav a:hover {
   border-radius: 30px;
 }
 
+.list_item a:hover{
+  background-color: #0065FC;
+  color: white;
+}
+
 /*Info*/
 .info {
   display: flex;
@@ -137,6 +148,9 @@ nav a:hover {
   color: #0065FC;
   border: 2px solid #F2F2F2;
   padding: 5px;
+  height: 5px;
+  width: 10px;
+  max-width: 10px;
   border-radius: 50% 50%;
 }
 
@@ -148,14 +162,19 @@ nav a:hover {
 main {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+
+}
+
+article a{
+  text-decoration: none;
+  color: black;
 }
 
 .block {
   background-color: #F2F2F2;
   border-radius: 30px 30px;
   padding: 0.5em;
-  width: 65%;
+
 }
 
 h2 {
@@ -167,8 +186,8 @@ h2 {
   display: grid;
   justify-content: flex-start;
   grid-gap: 20px;
-  grid-template-rows: repeat (2, 50px);
-  grid-template-columns: repeat (3, 50px);
+  grid-template-rows: repeat(2, 50px);
+  grid-template-columns: repeat(3, 50px);
 }
 
 .item1 {
