--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 /*Header & Nav*/
 nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
@@ -93,36 +94,42 @@ nav a:hover {
 }
 
 .filtre p {
-  margin: 10px 25px 0px 0px;
+  margin-top: 25px;
   font-weight: bold;
   height: 1.6em;
 }
 
 .list {
   display: flex;
+
 }
 
 .list_item {
   display: flex;
   align-items: center;
+  justify-content: center;
   list-style: none;
   font-weight: bold;
-  margin: 0px 20px 0px 0px;
-  border-radius: 30px 30px;
+  margin: 0px 35px 0px 0px;
+  border-radius: 30px;
 }
 
-.list_item .fas {
+.list_item i{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #DEEBFF;
   color: #0065FC;
   padding: 10px;
-  border-radius: 20px 20px;
+  border-radius: 20px;
+  margin-right: 0.5em;
 }
 
 .list_item a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-right: 0.5em;
+  padding-right: 1em;
   text-decoration: none;
   color: black;
   border: 2px solid #F2F2F2;
@@ -144,14 +151,17 @@ nav a:hover {
   margin-bottom: 2em;
 }
 
-#icon_info .fas {
+#icon_info i{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #0065FC;
   border: 2px solid #F2F2F2;
   padding: 5px;
-  height: 5px;
-  width: 10px;
-  max-width: 10px;
-  border-radius: 50% 50%;
+  border-radius: 50%;
+  height: 1em;
+  width: 1em;
+  max-width: 1em;
 }
 
 .info p {
@@ -161,20 +171,19 @@ nav a:hover {
 /* Main */
 main {
   display: flex;
-  flex-direction: row;
-
 }
 
-article a{
+.block a{
   text-decoration: none;
   color: black;
 }
 
 .block {
   background-color: #F2F2F2;
-  border-radius: 30px 30px;
+  border-radius: 30px;
   padding: 0.5em;
-
+  height: 37.5em;
+  width: 65%;
 }
 
 h2 {
@@ -183,11 +192,10 @@ h2 {
 
 /* Grid*/
 .container {
-  display: grid;
-  justify-content: flex-start;
-  grid-gap: 20px;
-  grid-template-rows: repeat(2, 50px);
-  grid-template-columns: repeat(3, 50px);
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .item1 {
@@ -221,13 +229,12 @@ h2 {
 }
 
 .item1, .item2, .item3, .item4, .item5, .item6 {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   justify-content: space-around;
   background-color: white;
-  border-radius: 20px 20px;
-  width: 13em;
-  height: 15em;
+  border-radius: 20px;
+  width: 12.5em;
+  height: 14em;
 }
 
 article img {
@@ -249,12 +256,8 @@ article p {
 .star {
   display: flex;
   align-items: flex-start;
-  margin: 0px 10px 0px 10px;
-}
-
-.star .blue {
-  display: flex;
   color: #0065FC;
+  margin: 0px 10px 0px 10px;
 }
 
 .star .grey_star {
@@ -262,23 +265,52 @@ article p {
 }
 
 /* Aside */
-.populaires {
+aside{
+  margin-left: 1em;
   background-color: #F2F2F2;
-  width: 15%;
-  border-radius: 30px 30px;
+  width: 35%;
+  border-radius: 30px;
 }
 
-.sidebar li {
+.populaires {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: space-around;
-  list-style: none;
 }
 
-.sidebar li img {
-  width: 45vh;
-  height: 20vh;
+.populaires i {
+  margin-right: 2em;
+}
+
+.populaires .fas{
+  height: 25px;
+}
+
+.under_sidebar {
+  display: grid;
+  grid-template-rows: auto;
+  grid-row-gap: 1.7em;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.under_sidebar-item{
+  display: grid;
+  background-color: white;
+  border-radius: 30px;
+  width: 325px;
+  height: 155px;
+  margin-left: 0.5em
+}
+
+.under_sidebar-item img {
+  display: grid;
+  justify-content: space-around;
+  margin-left: 0.5em;
+  margin-top: 0.7em;
+  width: 30vh;
+  height: 26vh;
   border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
