--- a/css/resolution.css
+++ b/css/resolution.css
@@ -1,13 +1,30 @@
 /* Mobile */
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 578px) {
 
-/* Header & Nav */
+  body{
+    margin-left: 0px;
+  }
+
+  header, nav{
+    margin-left: 15px;
+  }
+
+  /* Header & Nav */
   nav {
     width: auto;
     display: flex;
     flex-direction: column;
     align-items: baseline;
+  }
+
+  nav ul{
+    width: 100%;
+  }
+
+  nav li{
+    margin-right: 75px;
+    margin-left: 20px;
   }
 
    .navbar{
@@ -21,7 +38,7 @@
     flex-direction: row;
   }
 
-  nav button{
+  nav .bold{
     position: absolute;
     right: 10%;
     top: 25px;
@@ -38,13 +55,35 @@
     color: #0065FC;
   }
 
-/* Section1 */
+  /* Section1 */
+  section{
+    margin-left: 30px;
+  }
 
-/* Filtre */
+  #search_button{
+    padding: 10px;
+  }
+
+  /* Searchbar */
+  #search_button span{
+    display: none;
+  }
+
+  #search_button i{
+    display: inline-block;
+  }
+
+  /* Filtre */
   .filtre, .list{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .list{
+    padding-left: 0px;
+    padding-top: 0px;
   }
 
   .filtre p{
@@ -52,26 +91,84 @@
   }
 
    .list_item{
-     flex-wrap: wrap;
+    flex-wrap: wrap;
     padding-bottom: 20px;
   }
 
-  .info{
-    width: 100%;
-  }
-
+  /* Info */
   .info p{
     margin-left: 1em;
+    flex-wrap: nowrap;
+    width: 55%
   }
 
+  main{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+  }
 
+  aside{
+    height: 35.5em;
+    width: 100%;
+    margin-left: 0px;
+  }
+
+  .populaires h2{
+    margin-right: 50px;
+  }
+
+   .under_sidebar-item{
+    margin-left: 1.5em;
+    width: 320px;
+    height: 132px;
+  }
+
+  .under_sidebar-item img{
+    width: 15vh;
+    height: 18vh;
+  }
+
+  .block{
+    height: 35.5em;
+    width: 100%;
+    margin-left: 0px;
+    background-color: inherit;
+
+  }
+
+  .item1, .item2, .item3, .item4, .item5, .item6{
+    width: 335px;
+    height: 175px;
+    display: flex;
+    align-items: center;
+  }
+
+  article img{
+    width: 46vh;
+    height: 12vh;
+  }
 
 }
 
-
-
 /* Tablette */
 @media all and (min-width: 768px) and (max-width: 1023px){
+
+  /* Filtres */
+  .filtre, .list{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .list{
+    padding-left: 0px;
+  }
+
+  .list_item{
+    justify-content: space-between;
+  }
 
 
 }
