--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,6 @@ nav a:hover {
 
 #icon {
   padding: 9px;
-  width: 20px;
-  max-width: 20px;
   background-color: #F2F2F2;
   border-top-left-radius: 10px 10px;
   border-bottom-left-radius: 10px 10px;
@@ -67,6 +65,7 @@ nav a:hover {
 
 #city {
   font-weight: bold;
+  font-family: "Raleway";
 }
 
 ::placeholder {
@@ -75,6 +74,8 @@ nav a:hover {
     }
 
 #search_button {
+  font-family: "Raleway";
+  font-weight: 600;
   margin: 0px;
   padding: 5px;
   border: 0px;
@@ -82,6 +83,10 @@ nav a:hover {
   border-bottom-right-radius: 10px 10px;
   background-color: #0065FC;
   color: white;
+}
+
+#search_button i{
+  display: none;
 }
 
 /*Filtres*/
@@ -148,7 +153,7 @@ nav a:hover {
   align-items: center;
   height: 2px;
   margin-top: 0.4em;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 
 #icon_info i{
