--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   margin-left: 30px;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 /*Header & Nav*/
 nav {
   display: flex;
@@ -181,9 +185,8 @@ main {
 .section1 {
   background-color: #F2F2F2;
   border-radius: 20px;
-  padding: 0.5em;
-  height: 33.5em;
   width: 65%;
+  padding-bottom: 10px;
 }
 
 h2 {
@@ -193,25 +196,27 @@ h2 {
 
 .container {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 20px;
 }
 
-.item1, .item2, .item3, .item4, .item5, .item6 {
+article{
+  max-width: 250px;
+  max-height: 250px;
   display: flex;
   flex-wrap: wrap;
-  margin: 2px 13px 25px 2px;
-  align-items: flex-start;
-  background-color: white;
-  border-radius: 15px;
-  width: 13em;
-  height: 12em;
-  box-shadow: 5px 5px 10px #DCDCDC;
+  flex-direction: column;
 }
 
 article a{
   text-decoration: none;
   color: black;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px #DCDCDC;
+  padding: 5px 0px 10px 10px;
+  margin-left: 15px;
 }
 
 article a:hover {
@@ -219,47 +224,51 @@ article a:hover {
   transition: ease 0.3s;
 }
 
-.block img {
-  width: 39vh;
-  height: 20vh;
+article img {
+  max-width: 95%;
+  height: 125px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  margin: 5px;
 }
 
-.container h3 {
-  margin: 0px 5px 0px 10px;
+article h3 {
   font-size: 1em;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 article p {
-  margin: 5px 10px 0px 10px;
   font-size: 15px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .star {
   display: flex;
   align-items: flex-start;
   color: #0065FC;
-  margin: 5px 10px 0px 10px;
 }
 
 .star .grey_star {
   color: #F2F2F2;
 }
 
-.link{
+.link a{
   color: black;
   text-decoration: none;
   margin-left: 20px;
   font-weight: 700;
 }
 
+.link a:hover{
+  color: #0065FC;
+}
+
 /* Aside */
-aside{
-  margin-left: 1em;
+/* aside{
+
   background-color: #F2F2F2;
-  width: 32%;
+
   border-radius: 20px;
 }
 
@@ -286,30 +295,24 @@ aside{
   justify-content: space-around;
 }
 
-.under_sidebar a:hover{
-  transform: scale(1.03);
-  transition: ease 0.3s;
-}
-
-.under_sidebar-item{
+.under_sidebar a{
   text-decoration: none;
   color: black;
   display: flex;
   background-color: white;
   border-radius: 10px;
-  width: 310px;
-  height: 128px;
-  margin-left: 0.7em;
-  margin-top: 1.7em;
   box-shadow: 5px 5px 10px #DCDCDC;
 }
 
-.under_sidebar-item img {
-  margin-left: 0.3em;
-  margin-top: 0.3em;
-  width: 25vh;
-  height: 23vh;
-  border-top-left-radius: 10px;
+.under_sidebar a:hover{
+  transform: scale(1.03);
+  transition: ease 0.3s;
+}
+
+.under_sidebar img {
+  /* min-width: 60%;
+  height: 100%; */
+  /* border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
@@ -328,10 +331,10 @@ aside{
 .right p{
   margin: 2px 0px 10px 10px;
   font-size: 15px;
-}
+} */
 
 /* Section2 */
-.section2{
+/* .section2{
   display: flex;
   flex-wrap: wrap;
 }
@@ -366,4 +369,4 @@ aside{
 .moyen img{
   width: 45vh;
   height: 35vh;
-}
+} */
