--- a/css/resolution.css
+++ b/css/resolution.css
@@ -110,7 +110,7 @@
 
   aside{
     height: 35.5em;
-    width: 100%;
+    max-width: 100%;
     margin-left: 0px;
   }
 
@@ -137,7 +137,7 @@
 
   }
 
-  .item1, .item2, .item3, .item4, .item5, .item6{
+  article{
     width: 335px;
     height: 175px;
     display: flex;
