--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   margin-left: 30px;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -73,9 +73,9 @@ nav a:hover {
 }
 
 ::placeholder {
-        color: black;
-        opacity: 1;
-    }
+  color: black;
+  opacity: 1;
+}
 
 #search_button {
   font-family: "Raleway";
@@ -89,7 +89,7 @@ nav a:hover {
   color: white;
 }
 
-#search_button i{
+#search_button i {
   display: none;
 }
 
@@ -110,7 +110,6 @@ nav a:hover {
 
 .list {
   display: flex;
-
 }
 
 .list_item {
@@ -123,7 +122,7 @@ nav a:hover {
   border-radius: 30px;
 }
 
-.list_item i{
+.list_item i {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -145,7 +144,7 @@ nav a:hover {
   border-radius: 30px;
 }
 
-.list_item a:hover{
+.list_item a:hover {
   background-color: #0065FC;
   color: white;
 }
@@ -160,13 +159,13 @@ nav a:hover {
   margin-bottom: 3em;
 }
 
-#icon_info i{
+#icon_info i {
   display: flex;
   align-items: center;
   justify-content: center;
   color: #0065FC;
   border: 2px solid #F2F2F2;
-  padding: 5px;
+  padding: 10px;
   border-radius: 50%;
   height: 1em;
   width: 1em;
@@ -199,9 +198,10 @@ h2 {
   flex-wrap: wrap;
   column-gap: 10px;
   row-gap: 20px;
+  margin-bottom: 15px;
 }
 
-article{
+article {
   max-width: 250px;
   max-height: 250px;
   display: flex;
@@ -209,7 +209,8 @@ article{
   flex-direction: column;
 }
 
-article a{
+article a {
+  max-width: 200px;
   text-decoration: none;
   color: black;
   background-color: white;
@@ -225,8 +226,9 @@ article a:hover {
 }
 
 article img {
-  max-width: 95%;
-  height: 125px;
+  min-width: 95%;
+  width: 95%;
+  height: 100px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -253,23 +255,25 @@ article p {
   color: #F2F2F2;
 }
 
-.link a{
+.link a {
   color: black;
   text-decoration: none;
   margin-left: 20px;
   font-weight: 700;
 }
 
-.link a:hover{
+.link a:hover {
   color: #0065FC;
 }
 
 /* Aside */
-/* aside{
-
+aside{
+  margin-left: 2em;
   background-color: #F2F2F2;
-
   border-radius: 20px;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .populaires {
@@ -277,6 +281,7 @@ article p {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .populaires h2{
@@ -288,50 +293,59 @@ article p {
   margin-top: 35px;
 }
 
-.under_sidebar {
+.sidebar {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
+  max-width: 250px;
 }
 
-.under_sidebar a{
+.sidebar a{
+  width: 265px;
+  height: 125px;
   text-decoration: none;
   color: black;
   display: flex;
+  justify-content: center;
   background-color: white;
   border-radius: 10px;
   box-shadow: 5px 5px 10px #DCDCDC;
+  margin-left: 15px;
+  margin-bottom: 25px;
+  padding-bottom: 7px;
 }
 
-.under_sidebar a:hover{
+.sidebar a:hover{
   transform: scale(1.03);
   transition: ease 0.3s;
 }
 
-.under_sidebar img {
-  /* min-width: 60%;
-  height: 100%; */
-  /* border-top-left-radius: 10px;
+.sidebar img {
+  display: inline-block;
+  padding: 7px 0px 0px 0px;
+  min-width: 40%;
+  width: 40%;
+  height: 115px;
+  border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
-.right{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+ .right{
+  display: inline-block;
+  margin-left: 5px;
 }
 
 .right h3{
-  margin: 0px 0px 7px 10px;
   font-size: 1em;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .right p{
-  margin: 2px 0px 10px 10px;
   font-size: 15px;
-} */
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
 
 /* Section2 */
 /* .section2{
