--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,5 @@
 /*----- Mobile -----*/
-@media screen and (min-width: 320px) and (max-width: 668px) {
+@media screen and (min-width: 320px) and (max-width: 668px) and (orientation: portrait) {
   body {
     margin-left: 0px;
   }
@@ -54,7 +54,7 @@
   }
 
   /* Section1 */
-  h1{
+  h1 {
     font-size: 1.7em;
   }
 
@@ -105,11 +105,11 @@
   }
 
   /* Populaire */
-  h2{
+  h2 {
     font-size: 1.5em
   }
 
-  main {
+  .main {
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
@@ -125,7 +125,7 @@
     align-items: center;
   }
 
-  .sidebar{
+  .sidebar {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -145,7 +145,7 @@
     height: 100%;
   }
 
-  .right{
+  .right {
     margin-left: 1em;
   }
 
@@ -163,15 +163,15 @@
     max-width: 650px;
   }
 
-   .container{
-     display: flex;
-     align-items: center;
-     flex-direction: column;
-     row-gap: 20px;
-     width: 100%;
+  .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 20px;
+    width: 100%;
   }
 
-  article {
+  .section1 article {
     max-width: 410px;
     max-height: 410px;
     display: flex;
@@ -179,12 +179,50 @@
     justify-content: space-between;
   }
 
-  article a{
-
+  .section1 article a {
+    width: 100%;
   }
 
-  .block img {
-    width: 35%;
-    height: 35%;
+  /* Activités */
+  .section2{
+    height: 65em;
+    display: flex;
+    flex-direction: column;
   }
+
+  .block{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    row-gap: 25px;
+    margin-left: 0px;
+  }
+
+  .block div{
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    height: 295px;
+  }
+
+  .block a{
+    max-width: 100%;
+    height: 300px;
+  }
+
+  .block img{
+    width: 100%;
+    height: 85%;
+    margin-top: 0px;
+  }
+
+  /* Footer */
+  #footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+
 }
