--- a/css/tablette.css
+++ b/css/tablette.css
@@ -1,5 +1,5 @@
 /*--------- Tablette Format Portrait ------------*/
-@media all and (min-width: 669px) and (max-width: 831px){
+@media all and (min-width: 669px) and (max-width: 934px) and (orientation: portrait) {
   h2 {
     font-size: 1.3em;
   }
@@ -30,7 +30,13 @@
   }
 
   /* Populaire */
-  main {
+  main{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .main {
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-around;
@@ -79,7 +85,7 @@
 
   /* Hébergements */
   .section1 {
-    height: 35.5em;
+    height: 56.5em;
     width: 100%;
     margin-left: 0px;
     background-color: inherit;
@@ -90,20 +96,21 @@
     column-gap: 10px;
   }
 
-  article {
-    max-width: 300px;
-    height: 210px;
+  .section1 article {
+    max-width: 400px;
+    height: 250px;
     display: flex;
     align-items: center;
   }
 
-  article a{
-    max-width: 300px
+  .section1 article a{
+    max-width: 400px;
+    height: 245px;
   }
 
-  .block img {
+  .section1 img {
     width: 35%;
-    height: 35%;
+    height: 65%;
     margin-top: 0px;
   }
 
@@ -114,6 +121,46 @@
   .container {
     margin-bottom: 15px;
   }
-}
+
+  /* Activités */
+  .section2{
+    height: 65em;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .block{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    row-gap: 25px;
+  }
+
+  .block div{
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    height: 295px;
+  }
+
+  .block a{
+    max-width: 100%;
+    height: 300px;
+  }
+
+  .block img{
+    width: 100%;
+    height: 85%;
+    margin-top: 0px;
+  }
+
+  /* Footer */
+  #footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
 
 }
