--- a/css/landscape.css
+++ b/css/landscape.css
@@ -75,7 +75,7 @@
   }
 
   /* Hébergements */
-  .section1 {
+  #section1 {
     height: 35.5em;
     width: 100%;
     margin-left: 0px;
@@ -87,18 +87,18 @@
     column-gap: 10px;
   }
 
-  .section1 article {
+  #section1 article {
     max-width: 300px;
     height: 210px;
     display: flex;
     align-items: center;
   }
 
-  .section1 article a {
+  #section1 article a {
     max-width: 300px
   }
 
-  .section1 img {
+  #section1 img {
     width: 50%;
     height: 35%;
     margin-top: 0px;
