--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,7 +117,7 @@
   }
 
   aside {
-    height: 620px;
+    height: 630px;
     width: 100%;
     margin-left: 0px;
     display: flex;
@@ -154,13 +154,13 @@
   }
 
   /* Hébergements */
-  .section1 {
+  #section1 {
     display: flex;
     align-items: center;
     flex-direction: column;
     margin-left: 0px;
     background-color: inherit;
-    max-width: 650px;
+    max-width: 65em;
   }
 
   .container {
@@ -171,20 +171,21 @@
     width: 100%;
   }
 
-  .section1 article {
+  #section1 article {
     max-width: 410px;
-    max-height: 410px;
+    mheight: 410px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
 
-  .section1 article a {
+  #section1 article a {
     width: 100%;
+    height: 300px;
   }
 
   /* Activités */
-  .section2{
+  #section2{
     height: 65em;
     display: flex;
     flex-direction: column;
