--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,11 +1,7 @@
 /*----- Mobile -----*/
-@media screen and (min-width: 320px) and (max-width: 668px) and (orientation: portrait) {
+@media screen and (min-width: 320px) and (max-width: 668px) {
   body {
     margin-left: 0px;
-  }
-
-  header, nav {
-    margin-left: 15px;
   }
 
   /* Header & Nav */
@@ -16,30 +12,36 @@
     align-items: baseline;
   }
 
+  nav img {
+    padding-left: 10px;
+  }
+
   nav ul {
     width: 100%;
   }
 
   nav li {
-    margin-right: 75px;
-    margin-left: 20px;
+    margin-right: 0;
   }
 
   .navbar {
     margin-left: 0px;
     border-bottom: 2px solid #F2F2F2;
     padding-left: 0px;
+    text-align: center;
   }
 
   .element {
     display: flex;
     flex-direction: row;
+    width: 100%;
   }
 
   nav .bold {
     position: absolute;
     right: 10%;
     top: 25px;
+    margin: 0;
   }
 
   nav li a {
@@ -62,11 +64,11 @@
     margin-left: 30px;
   }
 
+  /* Searchbar */
   #search_button {
     padding: 10px;
   }
 
-  /* Searchbar */
   #search_button span {
     display: none;
   }
@@ -104,14 +106,14 @@
     width: 55%
   }
 
-  /* Populaire */
+  /* Main */
+  /* Aside - Populaire */
   h2 {
     font-size: 1.5em
   }
 
   .main {
     display: flex;
-    align-items: center;
     flex-direction: column-reverse;
     justify-content: space-around;
   }
@@ -122,7 +124,6 @@
     margin-left: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   .sidebar {
@@ -153,27 +154,27 @@
     margin-right: 50px;
   }
 
-  /* Hébergements */
+  /* Section - Hébergements */
   #section1 {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    width: 100%;
     margin-left: 0px;
     background-color: inherit;
-    max-width: 65em;
   }
 
   .container {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    justify-content: flex-start;
     row-gap: 20px;
     width: 100%;
   }
 
   #section1 article {
-    max-width: 410px;
-    mheight: 410px;
+    width: inherit;
+    max-width: 90%;
+    max-height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -184,46 +185,50 @@
     height: 300px;
   }
 
-  /* Activités */
-  #section2{
-    height: 65em;
+  #section1 img {
+    width: 100%;
+    height: 65%;
+    margin-top: 0px;
+  }
+
+  /* Activités  à Marseille */
+  #section2 {
+    height: 1300px;
     display: flex;
     flex-direction: column;
   }
 
-  .block{
+  .block {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
     row-gap: 25px;
     margin-left: 0px;
+    height: 100%;
   }
 
-  .block div{
+  .block div {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    height: 295px;
+    max-height: 100%;
   }
 
-  .block a{
-    max-width: 100%;
+  .block a {
+    width: 100%;
     height: 300px;
   }
 
-  .block img{
+  .block img {
     width: 100%;
     height: 85%;
     margin-top: 0px;
   }
 
   /* Footer */
-  #footer{
+  #footer {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
   }
-
 }
