--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,8 @@ nav a:hover {
   margin-left: 0.3em
 }
 
-/* Hébergements */
+/* Main */
+/* Section - Hébergements */
 .main {
   display: flex;
 }
@@ -196,13 +197,14 @@ h2 {
 .container {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 10px;
+  column-gap: 15px;
   row-gap: 20px;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 #section1 article {
-  max-width: 250px;
+  width: 30%;
   max-height: 250px;
   display: flex;
   flex-wrap: wrap;
@@ -216,18 +218,17 @@ h2 {
   background-color: white;
   border-radius: 15px;
   box-shadow: 5px 5px 10px #DCDCDC;
-  padding: 5px 0px 10px 10px;
+  padding: 5px 5px 10px 5px;
   margin-left: 15px;
 }
 
 article a:hover {
-  transform: scale(1.05);
+  transform: scale(1.025);
   transition: ease 0.3s;
 }
 
 #section1 img {
-  min-width: 95%;
-  width: 95%;
+  width: 100%;
   height: 100px;
   object-fit: cover;
   border-top-left-radius: 15px;
@@ -267,7 +268,7 @@ article a:hover {
   color: #0065FC;
 }
 
-/* Populaires */
+/* Aside - Populaires */
 aside {
   margin-left: 2em;
   background-color: #F2F2F2;
@@ -275,7 +276,7 @@ aside {
   min-width: 300px;
   display: flex;
   flex-direction: column;
-  width: 265px;
+  width: 30%;
 }
 
 .populaires {
@@ -301,34 +302,32 @@ aside {
 }
 
 .sidebar a {
-  height: 130px;
+  height: 140px;
   width: 85%;
   text-decoration: none;
   color: black;
   display: flex;
-  justify-content: center;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 5px 5px 10px #DCDCDC;
   margin-left: 15px;
   margin-bottom: 25px;
   padding-right: 6px;
-  padding-bottom: 7px;
 }
 
 .sidebar a:hover {
-  transform: scale(1.1);
+  transform: scale(1.025);
   transition: ease 0.3s;
 }
 
 .sidebar img {
-  padding: 7px 0px 0px 5px;
+  padding: 3px;
   min-width: 40%;
   width: 40%;
-  height: 120px;
+  height: 100%;
   object-fit: cover;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .right {
@@ -344,16 +343,16 @@ aside {
 .right p {
   font-size: 15px;
   margin-top: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
-/* Activités */
-#section2{
+/* Activités à Marseille*/
+#section2 {
   width: 100%;
   margin-bottom: 2em;
 }
 
-.block{
+.block {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -363,12 +362,12 @@ aside {
   width: 88%;
 }
 
-.block div{
+.block div {
   max-width: 225px;
   max-height: 490px;
 }
 
-.block a{
+.block a {
   display: flex;
   flex-direction: column;
   text-decoration: none;
@@ -380,7 +379,7 @@ aside {
   padding: 0px 0px 10px 0px;
 }
 
-.block a:hover{
+.block a:hover {
   transform: scale(1.05);
   transition: ease 0.3s;
 }
@@ -391,12 +390,12 @@ aside {
   width: 100%;
 }
 
-.block h3{
+.block h3 {
   margin: 10px 0px 0px 5px;
   font-size: 1.05em;
 }
 
-.block1{
+.block1 {
   display: flex;
   flex-direction: column;
   row-gap: 34px;
@@ -419,40 +418,40 @@ aside {
 }
 
 /* Footer */
-footer{
+footer {
   background-color: #F2F2F2;
 }
 
-#footer{
+#footer {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
 
-h4{
+h4 {
   display: flex;
   margin-bottom: 0px;
   margin-left: 40px;
 }
 
-footer ul{
+footer ul {
   list-style: none;
 }
 
-footer li{
+footer li {
   margin-bottom: 10px;
 }
 
-footer a{
+footer a {
   text-decoration: none;
   color: black;
 }
 
-footer a:hover{
+footer a:hover {
   color: #0065FC;
 }
 
-.footer_item{
+.footer_item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
