--- a/css/tablette.css
+++ b/css/tablette.css
@@ -1,5 +1,14 @@
 /*--------- Tablette Format Portrait ------------*/
-@media all and (min-width: 669px) and (max-width: 934px) and (orientation: portrait) {
+@media all and (min-width: 669px) and (max-width: 934px) {
+  body {
+    margin-left: 0px;
+  }
+
+  /* Nav */
+  nav img {
+    padding-left: 10px;
+  }
+
   h2 {
     font-size: 1.3em;
   }
@@ -8,6 +17,7 @@
     font-size: 18px;
   }
 
+  /* Section1 */
   /* Filtres */
   .filtre, .list {
     display: flex;
@@ -22,6 +32,7 @@
 
   .list {
     padding-left: 0px;
+    width: 100%;
   }
 
   .list_item {
@@ -29,8 +40,13 @@
     margin-right: 20px;
   }
 
-  /* Populaire */
-  main{
+  .list_item a {
+    width: 100%;
+  }
+
+  /* Main */
+  /* Aside - Populaire */
+  main {
     display: flex;
     flex-direction: column;
     height: auto;
@@ -48,17 +64,16 @@
     margin-left: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
-  .sidebar{
+  .sidebar {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
   }
 
-  .sidebar a{
+  .sidebar a {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -70,10 +85,10 @@
     display: flex;
     min-width: 35%;
     width: 35%;
-    height: 120px;
+    height: 100%;
   }
 
-  .right{
+  .right {
     display: flex;
     flex-direction: column;
     margin-left: 1em;
@@ -83,7 +98,7 @@
     margin-right: 50px;
   }
 
-  /* Hébergements */
+  /* Section - Hébergements */
   #section1 {
     display: flex;
     flex-direction: column;
@@ -92,11 +107,10 @@
     background-color: inherit;
   }
 
-  .container{
+  .container {
     display: flex;
     column-gap: 10px;
     justify-content: flex-start;
-    align-items: center;
     width: 100%;
   }
 
@@ -108,7 +122,7 @@
     align-items: center;
   }
 
-  #section1 article a{
+  #section1 article a {
     max-width: 100%;
     height: 245px;
     margin-left: 0px;
@@ -128,45 +142,43 @@
     margin-bottom: 15px;
   }
 
-  /* Activités */
-  #section2{
+  /* Activités à Marseille */
+  #section2 {
+    height: 1300px;
     display: flex;
     flex-direction: column;
   }
 
-  .block{
+  .block {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
     row-gap: 25px;
+    height: 100%;
   }
 
-  .block div{
+  .block div {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    height: 295px;
+    max-height: 100%;
   }
 
-  .block a{
+  .block a {
     max-width: 100%;
     height: 300px;
   }
 
-  .block img{
+  .block img {
     width: 100%;
     height: 85%;
     margin-top: 0px;
   }
 
   /* Footer */
-  #footer{
+  #footer {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     height:
   }
-
-
 }
