--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,6 +4,10 @@
     margin-left: 0px;
   }
 
+  .test_container {
+    margin: 0;
+  }
+
   /* Header & Nav */
   nav {
     width: auto;
@@ -60,7 +64,7 @@
     font-size: 1.7em;
   }
 
-  section {
+  #section {
     margin-left: 30px;
   }
 
@@ -166,7 +170,8 @@
   .container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     row-gap: 20px;
     width: 100%;
   }
@@ -191,9 +196,9 @@
     margin-top: 0px;
   }
 
-  /* Activités  à Marseille */
+  /* Section - Activités */
   #section2 {
-    height: 1300px;
+    padding-bottom: 15px;
     display: flex;
     flex-direction: column;
   }
@@ -202,7 +207,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 25px;
-    margin-left: 0px;
+    margin-left: 15px;
     height: 100%;
   }
 
@@ -230,5 +235,10 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
+  }
+
+  #footer_content{
+    display: flex;
+    flex-direction: column;
   }
 }
