--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 body {
   font-family: "Raleway", sans-serif;
-  margin-left: 30px;
+  margin: 0;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.test_container {
+  margin: auto;
+  max-width: 1440px;
+  width: 95%
 }
 
 /*Header & Nav*/
@@ -49,6 +55,7 @@ nav a:hover {
   font-weight: bold;
   color: #0065FC;
   font-size: 15px;
+  margin-right: 0;
 }
 
 /* Section1 */
@@ -70,6 +77,13 @@ nav a:hover {
 #city {
   font-weight: bold;
   font-family: "Raleway";
+  border: none;
+  border-top: 1px solid #F2F2F2;
+  border-bottom: 1px solid #F2F2F2;
+}
+
+#city:focus {
+  outline: none;
 }
 
 ::placeholder {
@@ -198,8 +212,8 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   column-gap: 15px;
-  row-gap: 20px;
-  margin-bottom: 15px;
+  row-gap: 30px;
+  margin-bottom: 35px;
   width: 100%;
 }
 
@@ -276,7 +290,7 @@ aside {
   min-width: 300px;
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 35%;
 }
 
 .populaires {
@@ -346,7 +360,7 @@ aside {
   margin-bottom: 25px;
 }
 
-/* Activités à Marseille*/
+/* Section - Activités */
 #section2 {
   width: 100%;
   margin-bottom: 2em;
@@ -358,8 +372,7 @@ aside {
   justify-content: space-between;
   row-gap: 25px;
   column-gap: 30px;
-  margin-left: 1em;
-  width: 88%;
+  width: 100%;
 }
 
 .block div {
@@ -380,11 +393,12 @@ aside {
 }
 
 .block a:hover {
-  transform: scale(1.05);
+  transform: scale(1.022);
   transition: ease 0.3s;
 }
 
 .block img {
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
@@ -424,8 +438,17 @@ footer {
 
 #footer {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#footer_content{
+  display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1400px;
 }
 
 h4 {
@@ -449,11 +472,15 @@ footer a {
 
 footer a:hover {
   color: #0065FC;
+  text-decoration: underline;
 }
 
 .footer_item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-around;
+}
+
+#footer_right{
+  margin-right: 20%;
 }
