--- a/css/tablette.css
+++ b/css/tablette.css
@@ -4,6 +4,11 @@
     margin-left: 0px;
   }
 
+  .test_container {
+    margin: 0;
+    width: inherit;
+  }
+
   /* Nav */
   nav img {
     padding-left: 10px;
@@ -138,15 +143,12 @@
     font-size: 19px;
   }
 
-  .container {
-    margin-bottom: 15px;
-  }
-
-  /* Activités à Marseille */
+  /* Section - Activités */
   #section2 {
-    height: 1300px;
+    padding-bottom: 15px;
     display: flex;
     flex-direction: column;
+    width: 95%;
   }
 
   .block {
@@ -154,6 +156,7 @@
     flex-direction: column;
     row-gap: 25px;
     height: 100%;
+    margin-left: 15px;
   }
 
   .block div {
@@ -175,10 +178,14 @@
   }
 
   /* Footer */
-  #footer {
+    footer {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height:
+  }
+
+  #footer_content{
+    display: flex;
+    flex-direction: column;
   }
 }
