--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,10 +1,10 @@
 /*------------ Tablette Format Paysage -----------*/
-@media all and (min-width: 935px) and (max-width: 1200px){
+@media all and (min-width: 935px) and (max-width: 1200px) {
   body {
     margin-left: 0px;
   }
 
-  nav a{
+  nav a {
     padding: 19px 0px;
   }
 
@@ -44,7 +44,7 @@
 
   /* Main */
   /* Aside - Populaire */
-  main{
+  main {
     display: flex;
     flex-direction: column;
     height: auto;
@@ -67,7 +67,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    column-gap: 20px;
+    column-gap: 15px;
   }
 
   .sidebar a {
@@ -146,26 +146,28 @@
   .block {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     row-gap: 25px;
   }
 
-  .block a {
+  #section2 a {
+    height: 100%;
     max-width: 100%;
   }
 
-  div .block1{
+  div .block1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 55px;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 85%;
+    max-height: 210px;
+    margin-right: 10%;
   }
 
-  .block div {
-    /* max-width: 100%; */
-    height: 300px;
+  div .medium {
+    height: 100%;
   }
 
   .block img {
@@ -173,6 +175,4 @@
     height: 85%;
     margin-top: 0px;
   }
-
-
 }
